# mind_mapper

./: .env.sample  .gitignore  README.md  database.db  pyproject.toml
data/demo_data/: Altman_wiki.txt  Brockman.txt  Ilya Sutskever.txt  Karpathy_wiki.txt  OpenAI.txt
data/text/: test.txt
src/: db.py  frontend.py  html_templates.py  logger.py  mind_map.py  schema.py  text.py  utils.py  vector_db.py  whisper.py
src/llm/: llm.py  prompts.py
